test/mutation_analysis/s0151_reverse_words_in_a_string/hafis/ablation_o3_r50/mutants/6/result.txt
./test/mutation_analysis/s0151_reverse_words_in_a_string/hafis/ablation_o3_r50/mutants/6/Solution.java:25: error: unreachable statement
        if (sb.length() > 0) {
        ^
1 error
